2009-05-05 Iuri Fernandes <iurifq@gmail.com>
* Fixed bug in new reserva

2009-05-05 Iuri Fernandes <iurifq@gmail.com>
* Created missing validations.

2009-05-05 Iuri Fernandes <iurifq@gmail.com>
* Commented okToReserve method

2009-05-05 Suzana Matos <suzana.mato@gmail.com>
* models :
	- reserva : tried to fix validation of reserva... (but it isn't working...)
	- apartamento : included some validations
* views : 
	- admin : translated words
	- hospedes, tipos_apartamentos, servicos, apartamentos : fixed date and some labels
	- reservas : fixed dates, labels and tipo apartamento(edit)

2009-05-04 Iuri Fernandes <iurifq@gmail.com>
* Made validation method okToReserve to be used to validade if there's
available apartments.

2009-05-04 Iuri Fernandes <iurifq@gmail.com>
* Finished creation of CRUD reserva.

2009-05-04 Suzana Matos <suzana.mato@gmail.com>
* Fixed combobox

2009-05-04 Suzana Matos <suzana.mato@gmail.com>
* Fixed apartamento
	- show the status
	- show the type
	- combobox of the type

2009-05-04 Iuri Fernandes <iurifq@gmail.com>
* Added field in "reserva" to select the "hospede" by name.

2009-05-04 Suzana Matos <suzana.mato@gmail.com>
* models : 
	- reservas/apartamentos: included belongs_to function (FK)
* views : 
	- reservas/apartamentos/tipos_apartamentos : translated words and
	fixed index layout

2009-05-04 Suzana Matos <suzana.mato@gmail.com>
* Fixed createTables 
	- apartamentos (wrong name in FK)
	- reservas (wrong name in FK)
	- hospedes (without engine inodb)

2009-05-04 Iuri Fernandes <iurifq@gmail.com>
* Created  scaffolding for apartamento.
* Added forgotten files from reserva.

2009-05-04 Iuri Fernandes <iurifq@gmail.com>
* Created  scaffolding for reservas. It's necessary to alter tipoAp and hosp in new reserva form.

2009-05-04 Iuri Fernandes <iurifq@gmail.com>
* Created  table reservas, but the foreign key for hospedes is not working.

2009-05-04 Iuri Fernandes <iurifq@gmail.com>
* Created Tipo_Apartamentos scaffolding.
