@@ -1,3 +1,6 @@
+2009-05-05 Suzana Matos <suzana.mato@gmail.com>
+* Tranlated months' names 
+
 2009-05-05 Iuri Fernandes <iurifq@gmail.com>
 * Fixed bug in new reserva
 
